fix: hide scrollbar but keep scrolling

--- a/app/design/frontend/Devmy/nextouch/Magento_Customer/web/css/source/_extend.less
+++ b/app/design/frontend/Devmy/nextouch/Magento_Customer/web/css/source/_extend.less
@@ -19,6 +19,21 @@
             .modal-inner-wrap {
                 border-radius: 100px;
                 background: #fff;
+                -ms-overflow-style: none;
+                scrollbar-width: none;
+
+                &::-webkit-scrollbar {
+                    display: none;
+                }
+
+                .modal-content {
+                    -ms-overflow-style: none;
+                    scrollbar-width: none;
+
+                    &::-webkit-scrollbar {
+                        display: none;
+                    }
+                }
             }
         }
         &.popup-authentication {
@@ -343,8 +358,8 @@
     .modal-popup {
         &._inner-scroll {
             .modal-inner-wrap {
-                background: #fff!important;
-                border-radius: 5px!important;
+                background: #fff !important;
+                border-radius: 10px !important;
             }
         }
     }
